--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    font-style: italic;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: rgb(226, 233, 236);
 }
 .header {
@@ -18,6 +18,7 @@ body{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 h1{
+    font-style: italic;
     color:rgb(248, 235, 217) ;
     text-shadow: 0px 2px #9a4f43;
 }
