--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@
 }
 
 body{
+    font-style: none;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: rgb(226, 233, 236);
 }
