--- a/style/style.css
+++ b/style/style.css
@@ -38,6 +38,7 @@ span{
 .img_row {
     display: flex;
     justify-content: center;
+    margin-top:20px;
     margin-bottom: 30px;
 }
 .img_container{
